--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,3 +1,10 @@
 <h1>About me</h1>
 
-<img src="images/travaux.png" alt="">
+<section>
+
+<p><strong>Name:</strong> Pauline Bellaud</p>
+<p><strong>Age:</strong> 30</p>
+<p><strong>Former job:</strong> Resource Coordinator in a translation agency</p>
+<p><strong>Incoming job:</strong> Full-stack web developper, maybe :)</p>
+
+</section>
