--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,23 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 html {
     font-family: 'Nunito', sans-serif;
+    height: 100%;
+}
+
+body {
+    position: relative;
+    min-height: 90%;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 5%;
 }
 
 nav {
     background-color: rgb(25, 35, 70);
     padding: 15px;
-    margin: 0;
     display: flex;
     justify-content: space-evenly;
-    border-radius: 0px 0px 10px 10px;
+    width: 98%;
 }
 
 footer {
+    position: absolute;
     background-color: rgb(25, 35, 70);
     padding: 15px;
-    margin: 0;
+    bottom: 0;
     color: whitesmoke;
-    border-radius: 10px 10px 0px 0px;
+    width: 98%;
 }
 
 a {
@@ -42,19 +52,21 @@ h3 {
     margin: 1% 10%;
 }
 
-div{
+div {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
-    border: 2px solid #eee;
-    border-radius: 20px;
     margin: 0 10%;
 }
 
-section{
+div, section {
     border: 2px solid #eee;
     border-radius: 20px;
+    background-color: rgba(70, 131, 180, 0.1);
+}
+
+section {
     margin: 2% 20%;
     padding: 1%;
     text-align: center;
@@ -65,8 +77,7 @@ p {
 }
 
 img {
-    width: 35%;
-    padding: 20px;
+    width: 30%;
 }
 
 #turn {
