--- a/views/works.hbs
+++ b/views/works.hbs
@@ -1,31 +1,22 @@
 <h1>My works</h1>
 <p>Here is a sample of my diffrent creations.</p>
+
 <h2>Dresses</h2>
-<div>
-    <img src="images/robe_noire.jpg" alt="robe_noire">
-    <img id="turn" src="images/robe_bleue.jpg" alt="robe_bleue">
-    <img src="images/robe_rouge.jpg" alt="robe_rouge">
-    <img src="images/robe_blanche.jpg" alt="robe_blanche"> 
-</div>
+
+{{> galleryImg "gallery-1"}}
 
 <h2>Cosplays</h2>
 <h3>Catwoman and Harley Quinn</h3>
-<div>
-    <img src="images/catwoman_harley2.JPG" alt="Catwoman and Harley">
-    <img src="images/catwoman_harley3.JPG" alt="Catwoman and Harley">
-</div>
+
+{{> galleryImg "gallery-2"}}
 
 <h3>Jill Valentine and Claire Redfield</h3>
-<div>
-    <img src="images/claire_jill.jpg" alt="Claire and Jill">
-    <img src="images/claire_jill2.jpg" alt="Claire and Jill"> 
-</div>
+
+{{> galleryImg "gallery-3"}}
 
 <h3>Tifa and Aerith</h3>
-<div>
-    <img src="images/tifa_aerith1.jpg" alt="Tifa and Aerith">
-    <img src="images/tifa_aerith2.jpg" alt="Tifa and Aerith">
-</div>
+
+{{> galleryImg "gallery-4"}}
 
 <h3>Yuna and Rikku</h3>
 <div>
@@ -34,21 +25,13 @@
 
 <h2>Plushies</h2>
 <h3>Crows</h3>
-<div>
-    <img src="images/birds1.jpg" alt="Crows">
-    <img src="images/birds2.jpg" alt="Crows">
-    <img src="images/birds3.jpg" alt="Crows">
-</div>
+
+{{> galleryImg "gallery-5"}}
 
 <h3>Horse</h3>
-<div>
-    <img id="turn" src="images/horse_pattern.jpg" alt="Horse">
-    <img src="images/horse_finished.jpg" alt="Horse">
-</div>
+
+{{> galleryImg "gallery-6"}}
 
 <h3>Raichu</h3>
-<div>
-    <img src="images/raichu1.jpg" alt="Raichu">
-    <img src="images/raichu2.jpg" alt="Raichu">
-    <img src="images/raichu3.jpg" alt="Raichu">
-</div>
+
+{{> galleryImg "gallery-7"}}
