--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
-<h1>Welcome to my page</h1>
+<h1>Welcome to my site</h1>
 <section>
 <h2>Sewing projects</h2>
 <p>Thanks to ironhack teachings, here is a little page with most of my sewing projects.
