--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,16 +60,41 @@ div {
     margin: 0 10%;
 }
 
-div, section {
+div, section, article {
     border: 2px solid #eee;
     border-radius: 20px;
     background-color: rgba(70, 131, 180, 0.1);
 }
 
 section {
-    margin: 2% 20%;
+    margin: 2% 25%;
     padding: 1%;
     text-align: center;
+}
+
+article {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 2% 20%;
+    width: 55%;
+}
+
+.div-form {
+    padding: 2% 5%;
+    margin: 2% 25% 2% 25%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.input {
+    width: 50%;
+}
+
+.button {
+    margin-top: 2%;
 }
 
 p {
@@ -80,6 +105,19 @@ img {
     width: 30%;
 }
 
-#turn {
-    transform: rotate(90deg);
-}
+button {
+    background: transparent;
+    color: rgb(135, 135, 210);
+    border: 1px solid;
+    border-color: rgb(135, 135, 210);
+    border-radius: 0.4rem;
+    cursor: pointer;
+    outline: none;
+    padding: 5px;
+  }
+  
+  button:hover {
+    background: rgb(135, 135, 210);
+    color: white;
+    border-color: transparent;
+  }
