--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My app</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     {{#each css}}
-    <link rel="stylesheet" href="css/{{this}}.css">
+    <link rel="stylesheet" href="/css/{{this}}.css">
     {{/each}}
     {{#each js}}
     <script type="module" src="js/{{this}}.js"></script>
@@ -18,6 +18,7 @@
         <nav>
             <a href="/">HOME</a>
             <a href="/about">ABOUT ME</a>
+            <a href="/cosplay">COSPLAY!</a>
             <a href="/works">MY WORKS</a>
         </nav>
     </header>
